fix input search on safari

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,6 +36,9 @@ input[type="checkbox"] {
 input[type="search"] {
   -webkit-appearance: textfield;
 }
+input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
 
 /*
 VARIABLES
